Add structure for generate and validate JWT
