# openapi/types.gen.go
@@ -9,6 +9,10 @@ import (
 	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 )
 
+const (
+	BearerAuthScopes = "BearerAuth.Scopes"
+)
+
 // CreatePostRequest defines model for CreatePostRequest.
 type CreatePostRequest struct {
 	Content string             `json:"content"`
@@ -75,6 +79,12 @@ type UserStats struct {
 	PostsCount *int `json:"posts_count,omitempty"`
 }
 
+// LoginHandlerMultipartBody defines parameters for LoginHandler.
+type LoginHandlerMultipartBody struct {
+	Password *string `json:"password,omitempty"`
+	Username *string `json:"username,omitempty"`
+}
+
 // CreateUserMultipartBody defines parameters for CreateUser.
 type CreateUserMultipartBody struct {
 	Username *string `json:"username,omitempty"`
@@ -89,6 +99,9 @@ type FollowHandlerJSONBody struct {
 type UnfollowHandlerJSONBody struct {
 	From *openapi_types.UUID `json:"from,omitempty"`
 }
+
+// LoginHandlerMultipartRequestBody defines body for LoginHandler for multipart/form-data ContentType.
+type LoginHandlerMultipartRequestBody LoginHandlerMultipartBody
 
 // PostHandlerJSONRequestBody defines body for PostHandler for application/json ContentType.
 type PostHandlerJSONRequestBody = CreatePostRequest
