# pkg/auth/jwt_validator.go
@@ -1,0 +1,23 @@
+package auth
+
+import (
+	"context"
+	"fmt"
+
+	"github.com/getkin/kin-openapi/openapi3filter"
+)
+
+func NewAuthenticator() openapi3filter.AuthenticationFunc {
+	return func(ctx context.Context, input *openapi3filter.AuthenticationInput) error {
+		return Authenticate(ctx, input)
+	}
+}
+
+func Authenticate(ctx context.Context, input *openapi3filter.AuthenticationInput) error {
+	// Later we can check more things if wanted
+	if input.SecuritySchemeName != "BearerAuth" {
+		return fmt.Errorf("security scheme %s != 'BearerAuth'", input.SecuritySchemeName)
+	}
+
+	return nil
+}
